trying to fix img on ios issue

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -30,6 +30,11 @@
 /* Base styles */
 .themed-image {
 	content: var(--image-src, attr(src));
+	max-width: 100%;
+	height: auto;
+	width: auto;
+	max-height: 3.5rem;
+	/* Equivalent to h-14 in Tailwind */
 }
 
 /* Light theme styles */
